syntax = "proto3";

package pb;
option go_package = "url-service/pb/url"; 

import "user.proto";

import "google/api/annotations.proto";

message URL {
    string id = 1;
    string redirect = 2;
    string TVF = 3;
    bool random = 4; 
    User owner = 5;
}

message CreateUrlReq{
    string redirect = 1;
    string TVF = 2;
}

message CreateUrlRes{
    string id = 1;
    string redirect = 2;
    string TVF = 3;
    bool random = 4; 
}

message GetRedirectByTVFReq {
    string TVF  = 1;
}

message GetRedirectByTVFRes {
    string redirect  = 1;
}

message GetURLsReq {
}

message GetURLsRes {
    repeated URL urls = 1;
}

message DeleteUrlReq{
    string id = 1;
}

message DeleteUrlRes{
}
message GetURLsByOwnerReq {
}

message GetURLsByOwnerRes {
   repeated URL urls = 1;
}


service URLService{
    // URL RPC
    rpc CreateUrl(CreateUrlReq) returns (CreateUrlRes);
    rpc DeleteURl(DeleteUrlReq) returns (DeleteUrlRes);
    rpc GetURLsByOwner(GetURLsByOwnerReq) returns (GetURLsByOwnerRes);
    rpc GetURLs(GetURLsReq) returns (GetURLsRes);
    rpc GetRedirectByTVF (GetRedirectByTVFReq) returns (GetRedirectByTVFRes);

}
// // protoc --proto_path=proto --go_out=pb/url --go_opt=paths=source_relative --go-grpc_out=pb/url --go-grpc_opt=paths=source_relative --openapiv2_out=doc/swagger proto/url.proto   